--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ li.project-item:hover .project-description {
 }
 
 /* 4. The hover trigger to show the menu. */
-@media (min-width: 769px) {
+@media (min-width: 769px) and (hover: hover) {
     .start-menu li.has-flyout:hover > .flyout-menu {
         display: block;
     }
